# loom

./: .gitignore  CMakeLists.txt  README.md  loom.desktop.in  themes.qrc
config/: config.lua
debian/: changelog  control  copyright  postinst  postrm  rules
include/: basic_highlighter.h  buffer.h  code_editor.h  debug_log.h  editor_window.h  file_tree_widget.h  ksyntax_highlighter.h  line_number_area.h  lua_bridge.h  markdown_highlighter.h  plugin_manager.h  syntax_highlighter.h  syntax_rules.h  tree_sitter_highlighter.h
plugins/: autoformat.lua  autosave.lua  theme_switcher.lua
scripts/: build_debug.sh  build_release.sh  download_tree_sitter_deps.sh  install_formatters.sh  package.sh  run_loom.sh
src/: basic_highlighter.cpp  buffer.cpp  code_editor.cpp  editor_window.cpp  file_tree_widget.cpp  ksyntax_highlighter.cpp  line_number_area.cpp  lua_bridge.cpp  main.cpp  markdown_highlighter.cpp  plugin_manager.cpp  syntax_highlighter.cpp  syntax_rules.cpp  tree_sitter_highlighter.cpp
src/editor_window/: editor_window_actions.cpp  editor_window_events.cpp  editor_window_file.cpp  editor_window_main.cpp  editor_window_menus.cpp  editor_window_syntax.cpp  editor_window_tab.cpp  editor_window_theme.cpp  editor_window_ui.cpp
test_files/: cursor_test.cpp  messy_format.cpp  sample.cpp  sample.js  sample.json  sample.lua  sample.md
themes/: atom-one-dark.qss  atom-one-light.qss  ayu-dark.qss  ayu-light.qss  ayu-mirage.qss  breeze-dark.qss  breeze-light.qss  catppuccin-mocha.qss  dracula.qss  falcon.qss  github-dark.qss  github-light.qss  gruvbox-dark.qss  gruvbox-light.qss  gruvbox.qss  monokai.qss  nord.qss  oblivion.qss  printing.qss  radical.qss  solarized-dark.qss  solarized-light.qss  vim-dark.qss
